# ElectricIssueSimulator

./: build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ar/com/westsoft/joyschool/electrictissuesimulator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: TissueViewModel.cpp  TissueViewModel.h  tissue.c  tissue.h
app/src/main/java/ar/com/westsoft/hearttissue/: Cells.kt  CoordenateGraph.kt  MainActivity.kt  PanelView.kt  TissueView.kt  TissueViewModel.kt
app/src/main/java/ar/com/westsoft/hearttissue/dominio/: Tissue.kt
app/src/main/java/ar/com/westsoft/hearttissue/model/: CoordinateModel.kt  TissueModel.kt
app/src/main/java/ar/com/westsoft/hearttissue/view/: CoordGraphControlView.kt  CoordenateGraph.kt  NumberPicker.kt  PanelView.kt  TissueView.kt
app/src/main/java/ar/com/westsoft/hearttissue/viewmodel/: TissueViewModel.kt
app/src/main/java/ar/com/westsoft/joyschool/electrictissuesimulator/: Cells.kt  CoordenateGraph.kt  MainActivity.kt  PanelView.kt  Tissue.kt  TissueModel.kt  TissueView.kt  TissueViewModel.kt
app/src/main/res/layout/: activity_main.xml  button_panel.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ar/com/westsoft/joyschool/electrictissuesimulator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
